package Interfaces;

public interface ISerializableCsv {
    String toCSV();        //convierte cada objeto para poder escribir o lleer una línea con formato CSV.
}
