package Interfaces;

import Models.Vehiculo;

public interface IVehiculoEditable {
    void setVehiculo(Vehiculo v);
    Vehiculo getVehiculo();

}
